src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    .btn-type {
        @apply text-center font-bold py-2 px-4 rounded mx-auto shadow-lg
    }

    .btn-direct {
        @apply text-center font-bold py-2 px-8 rounded bg-gray-600 text-white mx-24 mt-4 shadow-lg
    }

    .grid-layout-main {
        @apply grid grid-cols-3 justify-center text-white font-mono
    }

    .center {
        @apply mx-auto items-center justify-center
    }
}

